@@ -121,8 +121,9 @@ def _get_cache_parameters(query):
 
     if cache_key is None:
         # cache key - the value arguments from this query's parameters.
-        args = _params_from_query(query)
-        cache_key = " ".join([str(x) for x in args])
+        args = [str(x) for x in _params_from_query(query)]
+        args.extend([str(query._limit), str(query._offset)])
+        cache_key = " ".join(args)
 
     assert cache_key is not None, "Cache key was None !"
 
@@ -269,4 +270,6 @@ def _params_from_query(query):
         v.append(value)
     if query._criterion is not None:
         visitors.traverse(query._criterion, {}, {'bindparam':visit_bindparam})
+    for f in query._from_obj:
+        visitors.traverse(f, {}, {'bindparam':visit_bindparam})
     return v
